<resources>
    <string name="app_name">Easy Profile Switch</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_reset">Reset</string>
    <string name="action_delete">Delete</string>
    <string name="action_edit">Edit</string>
    <string name="action_add">Add</string>
    <string name="action_help">Help</string>
    <string name="action_about">About</string>

    <string name="title_activity_edit_profile">EditProfile</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_update_profile">Update Profile</string>
    <string name="title_activity_help">Help</string>
    <string name="title_activity_about">About</string>
    <string name="title_activity_settings">Settings</string>

    <string name="more_from_dev">More apps from the developer</string>
    <string name="share_app">Share App</string>
    <string name="rate_app">Rate App</string>
    <string name="dev_email">engmkbj@gmail.com</string>
    <string name="dev_name">Md Khairul Bashar</string>
    <string name="dev_text">Developer</string>
    <string name="app_desc">This is the Easiest way to switch your profile. We provide the most needed feature which are essential to change according to situation. We have avoided complex options that needs a handfull of time for a user to understand first. We belive people who are hardworking and busy are the real user of this type application. So, we tried to keep it simple as possible. Copyright 2015–2021. All Rights reserved by Developer</string>

    <string-array name="normal_level">
        <item> 4 </item>
        <item> 5 </item>
        <item> 6 </item>
        <item> 7 </item>
        <item> 8 </item>
        <item> 9 </item>
    </string-array>

    <string-array name="min_vel">
        <item>  2 </item>
        <item>  3 </item>
        <item>  4 </item>
        <item>  5 </item>
        <item>  6 </item>
        <item>  7 </item>
    </string-array>
    <string name="title_activity_profile_settings">Profile Settings</string>
</resources>
