<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        tools:context="com.bashar.salatreminder.AboutActivity">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:src="@drawable/about_image"
            android:id="@+id/imageView" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/app_name"
            android:textSize="22sp"
            android:typeface="sans"
            android:id="@+id/textView14"
            android:layout_marginTop="12dp"
            android:layout_alignTop="@+id/imageView"
            android:layout_toEndOf="@+id/imageView" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="Build Version: 1.0.1013"
            android:layout_marginBottom="12dp"
            android:id="@+id/textView15"
            android:textSize="18sp"
            android:layout_alignBottom="@+id/imageView"
            android:layout_alignStart="@+id/textView14" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/app_desc"
            android:id="@+id/textView16"
            android:textSize="16sp"
            android:layout_below="@+id/imageView"
            android:layout_alignParentStart="true"
            android:layout_marginTop="25dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/dev_text"
            android:id="@+id/textView17"
            android:textSize="20sp"
            android:typeface="sans"
            android:layout_below="@+id/textView16"
            android:layout_alignParentStart="true"
            android:layout_marginTop="25dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/dev_name"
            android:id="@+id/textView18"
            android:textSize="19sp"
            android:layout_below="@+id/textView17"
            android:layout_alignParentStart="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/dev_email"
            android:id="@+id/textView19"
            android:textSize="18sp"
            android:autoLink="email"
            android:layout_below="@+id/textView18"
            android:layout_alignParentStart="true" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rate_app"
            android:id="@+id/button3"
            android:layout_below="@+id/textView19"
            android:layout_marginTop="54dp"
            android:layout_alignParentStart="true" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/share_app"
            android:id="@+id/button4"
            android:layout_alignTop="@+id/button3"
            android:layout_alignEnd="@+id/textView16" />

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/more_from_dev"
            android:id="@+id/button5"
            android:layout_below="@+id/button3"
            android:layout_alignStart="@+id/button3" />

    </RelativeLayout>
</ScrollView>